screenlets (0.1.3~bzr523+dev~maverick1ubuntu1) UNRELEASED; urgency=low

  * debian/compat : Bump to level 7.
  * debian/control:
   - Rewrite Depends and build-depends.
  * README.Debian :
   - Mention mutter as a composite manager.
  * debian/format & README.source:
   - Switch to format 3.0 (quilt) and remove the README.source. 

 -- Julien Lavergne <gilir@ubuntu.com>  Fri, 19 Nov 2010 16:32:00 +0100

screenlets (0.1.3~bzr523+dev~maverick1) maverick; urgency=low

  * Checking version number for debs and Screenlets normalized.
  * Additional packaging system for Debian Screenlets packs.

 -- Guido Tabbernuk <boamaod@gmail.com>  Tue, 16 Nov 2010 20:06:53 +0900

screenlets (0.1.3~bzr511+20101110054139~maverick1) maverick; urgency=low

  * Incorporated most of the patches from bug tracker.
  * Fixed a problem with the theme directories.
  * Fixed icon logic to work with Ubuntu new icon policy.
  * Monochrome icons available by default.
  * Added Compiz setting to make screenlets stick to Desktop.
  * Updated notification area menu and fixed refresh.
  * Updated context menu.
  * Updated some strings, links, translations.
  * Updated the link to get fresh Screenlets.
  * Implemented package requirements check for Screenlets.
  * Created debianizer.
  * Removed all individual Screenlets.

 -- Guido Tabbernuk <boamaod@gmail.com>  Wed, 10 Nov 2010 12:54:00 +0900

screenlets (0.1.2-7ubuntu2) maverick; urgency=low

  * debian/patches/21-return-ip-address.patch:
   - Fix screenlets.sensors.net_get_ip() to get the IP address. Thanks
     Michel Leunen for the patch. (LP: #618868)

 -- Julien Lavergne <gilir@ubuntu.com>  Sat, 21 Aug 2010 18:01:52 +0200

screenlets (0.1.2-7ubuntu1) lucid; urgency=low

  * Updated tomboy notes folder path. (LP: #477017)

 -- Frank Cheung <fcuk112@gmail.com>  Sun, 08 Nov 2009 13:18:33 +0000

screenlets (0.1.2-7) unstable; urgency=medium

  * Urgency to medium to fix RC bug.
  * debian/rules: Really apply patches to fix the segfaults again. 