@@ -6,7 +6,9 @@ screenlets (0.1.3~bzr523+dev~maverick1ubuntu1) UNRELEASED; urgency=low
   * README.Debian :
    - Mention mutter as a composite manager.
   * debian/format & README.source:
-   - Switch to format 3.0 (quilt) and remove the README.source. 
+   - Switch to format 3.0 (quilt) and remove the README.source.
+  * debian/rules
+   - Convert to dh7.
 
  -- Julien Lavergne <gilir@ubuntu.com>  Fri, 19 Nov 2010 16:32:00 +0100
 
